--- a/support.html
+++ b/support.html
@@ -76,9 +76,9 @@
 
     <section>
         <h2>Contact Us</h2>
-        <p>If you need further assistance, please fill out the form below or email us at <a href="mailto:support@solalumina.com">support@solalumina.com</a>.</p>
+        <p>If you need further assistance, please fill email us at <a href="mailto:33braille-rushers@icloud.com">33braille-rushers@icloud.com</a>.</p>
 
-        <form class="contact-form" action="mailto:33braille-rushers@icloud.com" method="POST" enctype="multipart/form-data">
+        <!-- <form class="contact-form" action="mailto:33braille-rushers@icloud.com" method="POST" enctype="multipart/form-data">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -89,7 +89,7 @@
             <textarea id="message" name="message" rows="5" required></textarea>
 
             <button type="submit">Send Message</button>
-        </form>
+        </form> -->
     </section>
 </body>
 </html>
