--- a/support.html
+++ b/support.html
@@ -70,7 +70,7 @@
 
         <div class="faq-item">
             <p class="faq-question">What should I do if I encounter an issue with the app?</p>
-            <p>If you’re experiencing any issues, please use the contact form below or email us at <a href="mailto:support@solalumina.com">support@solalumina.com</a> for assistance.</p>
+            <p>If you’re experiencing any issues, please use the contact form below or email us at <a href="mailto:33braille-rushers@icloud.com">support@solalumina.com</a> for assistance.</p>
         </div>
     </section>
 
